<resources>
    <string name="app_name">Hackathon Kakee</string>
    <string name="slogan">Your one and only hackathon app</string>
    <string name="poweredBy">Powered by Team YYDDS</string>
    <string name="hello">Hello</string>
    <string name="login_welcome">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="edit_details">Edit Details</string>
    <string name="show_participants">Show Participants</string>
    <string name="show_teams">Show Teams</string>
    <string name="announcement">Announcement</string>
    <string name="manage_news">Manage News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hackathon_detail">HackathonDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_news">CreateNewsActivity</string>
</resources>